src/widgets/layout/ui/Header.module.scss
.container {
  position: sticky;
  z-index: 3;
  top: 0;

  border-bottom: 1px solid var(--brand-color-border-default);

  background-color: var(--brand-color-canvas-default);

  .inner {
    display: flex;
    gap: var(--base-size-16);
    align-items: center;
    justify-content: space-between;

    padding: var(--base-size-16) var(--base-size-24);

    .left {
      display: flex;
      flex-shrink: 0;
      gap: var(--base-size-24);
      align-items: center;

      .logo {
        display: flex;
        gap: var(--base-size-8);
        align-items: center;

        color: var(--brand-color-text-default);
        text-decoration: none;

        &:hover {
          opacity: 0.8;
        }

        svg {
          fill: var(--brand-color-text-default);
        }

        .title {
          font-size: 18px;
          font-weight: 600;
        }
      }
    }

    .actions {
      display: flex;
      flex-shrink: 0;
      gap: var(--base-size-8);
      align-items: center;
    }

    .themeToggle {
      cursor: pointer;

      display: flex;
      flex-shrink: 0;
      align-items: center;
      justify-content: center;

      width: var(--base-size-32);
      height: var(--base-size-32);
      padding: 0;
      border: none;
      border-radius: var(--base-size-6);

      color: var(--brand-color-text-muted);

      background-color: transparent;

      &:hover {
        color: var(--brand-color-text-default);
        background-color: var(--brand-color-canvas-subtle);
      }

      svg {
        fill: currentcolor;
      }
    }
  }
}

